--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Start My Styles -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- End My Styles -->
     <title>Vite App</title>
   </head>
   <body>
-    <!-- <div id="app"></div> -->
-    <script type="module" src="/main.js"></script>
+    <!-- Start My Code -->
+    <script type="module" src="/js/code.js"></script>
+    <!-- End My Code -->
+
   </body>
 </html>
